# CustomCH

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
.python/CombineHarvester/: CombineTools
CombineHarvester/: CombinePdfs  CombineTools  __init__.py
CombineHarvester/CombinePdfs/interface/: CMSHistFuncFactory.h  MorphFunctions.h
CombineHarvester/CombineTools/interface/: Algorithm.h  AutoRebin.h  BinByBin.h  CardWriter.h  CombineHarvester.h  CopyTools.h  HistMapping.h  HttSystematics.h  JsonTools.h  Logging.h  MakeUnique.h  Object.h  Observation.h  Parameter.h  ParseCombineWorkspace.h  Plotting.h  Plotting_Contours.h  Plotting_Style.h  Process.h  SOverBTools.h  Systematic.h  Systematics.h  TFileIO.h  Utilities.h  ValidationTools.h  ValidationToolsNoJSON.h  json-forwards.h  json.h  json.hpp  strict_fstream.hpp  zstr.hpp
CombinePdfs/: CMakeLists.txt
CombinePdfs/python/: MSSM.py  ModelIndependent.py  THDM.py  __init__.py  morphing.py
CombinePdfs/scripts/: plotMorphing.py  testBinning.py
CombinePdfs/src/: CMSHistFuncFactory.cc  MorphFunctions.cc
CombineTools/: CMakeLists.txt
CombineTools/input/: __init__.py
CombineTools/input/examples/: __init__.py
CombineTools/input/job_prefixes/: __init__.py  job_prefix_ic.txt  job_prefix_naf.txt
CombineTools/input/xsecs_brs/: __init__.py
CombineTools/interface/: CombineHarvester.h  PathTools.h  cli.hpp
CombineTools/python/: __init__.py  ch.py  maketable.py  pdgRounding.py  plotting.py
CombineTools/python/combine/: CombineToolBase.py  CovMatrix.py  EnhancedCombine.py  FastScan.py  Impacts.py  ImpactsFromScans.py  LimitGrids.py  Output.py  T2W.py  TaylorExpand.py  Workspace.py  __init__.py  crab.py  opts.py  rounding.py  utils.py
CombineTools/python/systematics/: SMLegacy.py  __init__.py
CombineTools/scripts/: Example3.py  HhhExample.py  MSSMtanbPlot.py  SMLegacyExample.py  ValidateDatacards.py  __init__.py  custom_crab.py  do_nothing_cfg.py  injectBBH.py  scaleGGH.py  scaleYR2ToYR3.py  setup-tH.py  simpleLimits.py  updateBinBuildFile.py
CombineTools/src/: CombineHarvester.cc  CombineHarvester_Creation.cc  CombineHarvester_Datacards.cc  CombineHarvester_Evaluate.cc  HttSystematics_SMLegacy.cc  ParseCombineWorkspace.cc  PathTools.cc  Process.cc  Systematic.cc  Utilities.cc  cli.cpp
alt_ver/: .gitignore  CMakeLists.txt  Doxyfile  README.md  pyproject.toml
alt_ver/CombinePdfs/python/: MSSM.py  morphing.py
alt_ver/CombinePdfs/scripts/: plotMorphing.py
alt_ver/CombineTools/python/: __init__.py  ch.py  pdgRounding.py  plotting.py
alt_ver/CombineTools/python/combine/: Impacts.py
alt_ver/CombineTools/python/systematics/: Hhh.py
alt_ver/CombineTools/scripts/: HhhExample.py  __init__.py  parseCombineWorkspaceExample.py  partialCorrelationEdit.py  setup-tH.py  testingPyInterface.py
alt_ver/CombineTools/src/: CombineHarvester_Filters.cc  Logging.cc  ValidationTools.cc  cli.cpp
alt_ver/OldCH/CombineTools/src/: CombineHarvester_Creation.cc  CombineHarvester_Datacards.cc  Utilities.cc
alt_ver/cmake/: Findvdt.cmake
alt_ver/docs/: BSM-ModelIndependent-Limits-MSSMHTT.md  ChargedHiggs.md  HybridNewGrid.md  Limits.md  Main.md  PythonInterface.md  ReproduceRun1HTTDatacards.md  StandaloneInstallation.md  mA-tanb-Limits.md  publish-doxygen.sh
alt_ver/docs/doxypypy/: doxypypy.py
cmake/: FindHiggsAnalysisCombinedLimit.cmake  FindHistFactory.cmake
cmake/modules/: FindHiggsAnalysisCombinedLimit.cmake  FindHistFactory.cmake  FindVDT.cmake
combineharvester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: BSM-ModelIndependent-Limits-MSSMHTT.md  BuildSystem.md  ChargedHiggs.md  Example1.md  Example2.md  Example3.md  Limits.md  MSSMWithMorphing.md  Main.md  PythonInterface.md  ReproduceRun1HTTDatacards.md  RooMorphingPdf.md  StandaloneInstallation.md  mA-tanb-Limits.md  make_docs.sh  publish-doxygen.sh
docs/doxypypy/: doxypypy.py
