[build-system]
requires = ["scikit-build-core", "setuptools>=61", "wheel", "cmake", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "combineharvester"
version = "0.1.0"
description = "CMS CombineHarvester tools"
readme = "README.md"
authors = [{ name = "CMS" }]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "cppyy",
]

[project.scripts]
pdg-round = "CombineHarvester.CombineTools.pdgRounding:main"
ch-maketable = "CombineHarvester.CombineTools.maketable:main"

[tool.setuptools]
packages = [
    "CombineHarvester",
    "CombineHarvester.CombineTools",
    "CombineHarvester.CombineTools.combine",
    "CombineHarvester.CombineTools.systematics",
    "CombineHarvester.CombineTools.scripts",
    "CombineHarvester.CombineTools.input",
    "CombineHarvester.CombineTools.input.examples",
    "CombineHarvester.CombineTools.input.job_prefixes",
    "CombineHarvester.CombineTools.input.xsecs_brs",
]
include-package-data = true

[tool.setuptools.package-dir]
"CombineHarvester" = "CombineHarvester"
"CombineHarvester.CombineTools" = "CombineTools/python"
"CombineHarvester.CombineTools.combine" = "CombineTools/python/combine"
"CombineHarvester.CombineTools.systematics" = "CombineTools/python/systematics"
"CombineHarvester.CombineTools.scripts" = "CombineTools/scripts"
"CombineHarvester.CombineTools.input" = "CombineTools/input"
"CombineHarvester.CombineTools.input.examples" = "CombineTools/input/examples"
"CombineHarvester.CombineTools.input.job_prefixes" = "CombineTools/input/job_prefixes"
"CombineHarvester.CombineTools.input.xsecs_brs" = "CombineTools/input/xsecs_brs"

[tool.setuptools.package-data]
"CombineHarvester.CombineTools" = ["*.so"]
"CombineHarvester.CombineTools.scripts" = ["*"]
"CombineHarvester.CombineTools.input" = ["*"]
"CombineHarvester.CombineTools.input.examples" = ["*"]
"CombineHarvester.CombineTools.input.job_prefixes" = ["*"]
"CombineHarvester.CombineTools.input.xsecs_brs" = ["*"]

[tool.scikit-build]
wheel.install-dir = ""
cmake.minimum-version = "3.15"

