[build-system]
requires = ["setuptools>=61", "wheel", "cmake", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "combineharvester"
version = "0.1.0"
description = "CMS CombineHarvester tools"
readme = "README.md"
authors = [{name = "CMS"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "cppyy",
]

[project.scripts]
pdg-round = "CombineHarvester.CombineTools.pdgRounding:main"
ch-maketable = "CombineHarvester.CombineTools.maketable:main"

[tool.setuptools]
packages = [
    "CombineHarvester",
    "CombineHarvester.CombineTools",
    "CombineHarvester.CombineTools.combine",
    "CombineHarvester.CombineTools.systematics",
    "CombineHarvester.CombineTools.scripts",
    "CombineHarvester.CombineTools.input",
    "CombineHarvester.CombineTools.input.examples",
    "CombineHarvester.CombineTools.input.job_prefixes",
    "CombineHarvester.CombineTools.input.xsecs_brs",
]

[tool.setuptools.package-dir]
"CombineHarvester" = "CombineHarvester"
"CombineHarvester.CombineTools" = "CombineHarvester/CombineTools/python"
"CombineHarvester.CombineTools.combine" = "CombineHarvester/CombineTools/python/combine"
"CombineHarvester.CombineTools.systematics" = "CombineHarvester/CombineTools/python/systematics"
"CombineHarvester.CombineTools.scripts" = "CombineHarvester/CombineTools/scripts"
"CombineHarvester.CombineTools.input" = "CombineHarvester/CombineTools/input"
"CombineHarvester.CombineTools.input.examples" = "CombineHarvester/CombineTools/input/examples"
"CombineHarvester.CombineTools.input.job_prefixes" = "CombineHarvester/CombineTools/input/job_prefixes"
"CombineHarvester.CombineTools.input.xsecs_brs" = "CombineHarvester/CombineTools/input/xsecs_brs"

[tool.setuptools.package-data]
"CombineHarvester.CombineTools" = ["*.so"]
"CombineHarvester.CombineTools.scripts" = ["*"]
"CombineHarvester.CombineTools.input" = ["*"]
"CombineHarvester.CombineTools.input.examples" = ["*"]
"CombineHarvester.CombineTools.input.job_prefixes" = ["*"]
"CombineHarvester.CombineTools.input.xsecs_brs" = ["*"]

