[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "cmake",
    "ninja",
    "cppyy-backend==1.15.3",
    "cppyy-cling",
]
build-backend = "setuptools.build_meta"

[project]
name = "combineharvester"
version = "0.1.0"
description = "CMS CombineHarvester tools"
readme = "README.md"
authors = [{name = "CMS"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "cppyy",
    'importlib_resources; python_version < "3.9"',
]

[project.scripts]
pdg-round = "CombineHarvester.CombineTools.pdgRounding:main"
ch-maketable = "CombineHarvester.CombineTools.maketable:main"

[tool.setuptools.packages.find]
where = [".python"]
include = ["CombineHarvester*"]
exclude = ["copy_CombinedLimit*", "copy_cppyy*"]

[tool.setuptools.package-data]
"CombineHarvester.CombineTools" = ["*.so"]
